version/0.16/_sources/examples/00-fluent/external_compressible_flow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-fluent/external_compressible_flow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_00-fluent_external_compressible_flow.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-fluent_external_compressible_flow.py:

.. _ref_external_compressible_flow_settings_api:

Modeling External Compressible Flow
-----------------------------------
The purpose of this tutorial is to compute the turbulent flow past a transonic
wing at a nonzero angle of attack using the k-w SST turbulence model.

This example uses the guided workflow for watertight geometry meshing
because it is appropriate for geometries that can have no imperfections,
such as gaps and leakages.

**Workflow tasks**

The Modeling External Compressible Flow Using the Meshing Workflow guides you through these tasks:

- Creation of capsule mesh using Watertight Geometry workflow.
- Model compressible flow (using the ideal gas law for density).
- Set boundary conditions for external aerodynamics.
- Use the k-w SST turbulence model.
- Calculate a solution using the pressure-based coupled solver with global time step selected for the pseudo time method.
- Check the near-wall mesh resolution by plotting the distribution of .

**Problem description**

The problem considers the flow around a wing at an angle of attack a=3.06° and a free stream Mach
number of 0.8395 (M=0.8395). The flow is transonic, and has a shock near the mid-chord (x/c≃0.20)
on the upper (suction) side. The wing has a mean aerodynamic chord length of 0.64607 m, a span of 1.1963 m,
an aspect ratio of 3.8, and a taper ratio of 0.562.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default


    # sphinx_gallery_thumbnail_path = '_static/external_compressible_flow.png'








.. GENERATED FROM PYTHON SOURCE LINES 34-37

.. image:: /_static/external_compressible_flow_011.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 39-48

Example Setup
-------------
Before you can use the meshing workflow, you must set up the
example and initialize this workflow.

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes downloading and importing
the geometry files.

.. GENERATED FROM PYTHON SOURCE LINES 48-59

.. code-block:: default


    import ansys.fluent.core as pyfluent
    from ansys.fluent.core import examples

    wing_spaceclaim_file, wing_intermediary_file = [
        examples.download_file(
            CAD_file, "pyfluent/external_compressible", save_path=pyfluent.EXAMPLES_PATH
        )
        for CAD_file in ["wing.scdoc", "wing.pmdb"]
    ]





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Checking if specified file already exists...
    File does not exist. Downloading specified file...
    Download successful. File path:
    /home/ansys/.local/share/ansys_fluent_core/examples/wing.scdoc
    Checking if specified file already exists...
    File does not exist. Downloading specified file...
    Download successful. File path:
    /home/ansys/.local/share/ansys_fluent_core/examples/wing.pmdb




.. GENERATED FROM PYTHON SOURCE LINES 60-64

Launch Fluent
~~~~~~~~~~~~~
Launch Fluent as a service in meshing mode with double precision running on
four processors.

.. GENERATED FROM PYTHON SOURCE LINES 64-72

.. code-block:: default


    meshing = pyfluent.launch_fluent(
        precision="double",
        processor_count=4,
        mode="meshing",
        cwd=pyfluent.EXAMPLES_PATH,
    )








.. GENERATED FROM PYTHON SOURCE LINES 73-76

Initialize workflow
~~~~~~~~~~~~~~~~~~~
Initialize the watertight geometry meshing workflow.

.. GENERATED FROM PYTHON SOURCE LINES 76-79

.. code-block:: default


    meshing.workflow.InitializeWorkflow(WorkflowType="Watertight Geometry")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 80-88

Watertight geometry meshing workflow
------------------------------------
The fault-tolerant meshing workflow guides you through the several tasks that
follow.

Import CAD and set length units
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the CAD geometry and set the length units to inches.

.. GENERATED FROM PYTHON SOURCE LINES 88-97

.. code-block:: default


    meshing.workflow.TaskObject["Import Geometry"].Arguments.set_state(
        {
            "FileName": wing_intermediary_file,
        }
    )

    meshing.workflow.TaskObject["Import Geometry"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 98-101

Add local sizing
~~~~~~~~~~~~~~~~
Add local sizing controls to the faceted geometry.

.. GENERATED FROM PYTHON SOURCE LINES 101-136

.. code-block:: default


    meshing.workflow.TaskObject["Add Local Sizing"].Arguments.set_state(
        {
            "AddChild": "yes",
            "BOIControlName": "wing-facesize",
            "BOIFaceLabelList": ["wing_bottom", "wing_top"],
            "BOISize": 10,
        }
    )

    meshing.workflow.TaskObject["Add Local Sizing"].AddChildAndUpdate()

    meshing.workflow.TaskObject["Add Local Sizing"].Arguments.set_state(
        {
            "AddChild": "yes",
            "BOIControlName": "wing-ege-facesize",
            "BOIFaceLabelList": ["wing_edge"],
            "BOISize": 2,
        }
    )

    meshing.workflow.TaskObject["Add Local Sizing"].AddChildAndUpdate()

    meshing.workflow.TaskObject["Add Local Sizing"].Arguments.set_state(
        {
            "AddChild": "yes",
            "BOIControlName": "boi_1",
            "BOIExecution": "Body Of Influence",
            "BOIFaceLabelList": ["wing-boi"],
            "BOISize": 5,
        }
    )

    meshing.workflow.TaskObject["Add Local Sizing"].AddChildAndUpdate()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 137-140

Generate surface mesh
~~~~~~~~~~~~~~~~~~~~~
Generate the surface mash.

.. GENERATED FROM PYTHON SOURCE LINES 140-147

.. code-block:: default


    meshing.workflow.TaskObject["Generate the Surface Mesh"].Arguments.set_state(
        {"CFDSurfaceMeshControls": {"MaxSize": 1000, "MinSize": 2}}
    )

    meshing.workflow.TaskObject["Generate the Surface Mesh"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 148-151

Describe geometry
~~~~~~~~~~~~~~~~~
Describe geometry and define the fluid region.

.. GENERATED FROM PYTHON SOURCE LINES 151-164

.. code-block:: default


    meshing.workflow.TaskObject["Describe Geometry"].UpdateChildTasks(
        SetupTypeChanged=False
    )

    meshing.workflow.TaskObject["Describe Geometry"].Arguments.set_state(
        {"SetupType": "The geometry consists of only fluid regions with no voids"}
    )

    meshing.workflow.TaskObject["Describe Geometry"].UpdateChildTasks(SetupTypeChanged=True)

    meshing.workflow.TaskObject["Describe Geometry"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 165-168

Update boundaries
~~~~~~~~~~~~~~~~~
Update the boundaries.

.. GENERATED FROM PYTHON SOURCE LINES 168-171

.. code-block:: default


    meshing.workflow.TaskObject["Update Boundaries"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 172-175

Update regions
~~~~~~~~~~~~~~
Update the regions.

.. GENERATED FROM PYTHON SOURCE LINES 175-178

.. code-block:: default


    meshing.workflow.TaskObject["Update Regions"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 179-183

Add boundary layers
~~~~~~~~~~~~~~~~~~~
Add boundary layers, which consist of setting properties for the
boundary layer mesh.

.. GENERATED FROM PYTHON SOURCE LINES 183-190

.. code-block:: default


    meshing.workflow.TaskObject["Add Boundary Layers"].Arguments.set_state(
        {"NumberOfLayers": 12}
    )

    meshing.workflow.TaskObject["Add Boundary Layers"].AddChildAndUpdate()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 191-195

Generate volume mesh
~~~~~~~~~~~~~~~~~~~~
Generate the volume mesh, which consists of setting properties for the
volume mesh.

.. GENERATED FROM PYTHON SOURCE LINES 195-209

.. code-block:: default


    meshing.workflow.TaskObject["Generate the Volume Mesh"].Arguments.set_state(
        {
            "VolumeFill": "poly-hexcore",
            "VolumeFillControls": {"HexMaxCellLength": 512},
            "VolumeMeshPreferences": {
                "CheckSelfProximity": "yes",
                "ShowVolumeMeshPreferences": True,
            },
        }
    )

    meshing.workflow.TaskObject["Generate the Volume Mesh"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 210-213

Check mesh in meshing mode
~~~~~~~~~~~~~~~~~~~~~~~~~~
Check the mesh in meshing mode.

.. GENERATED FROM PYTHON SOURCE LINES 213-216

.. code-block:: default


    meshing.tui.mesh.check_mesh()








.. GENERATED FROM PYTHON SOURCE LINES 217-220

Save mesh file
~~~~~~~~~~~~~~
Save the mesh file (``wing.msh.h5``).

.. GENERATED FROM PYTHON SOURCE LINES 220-223

.. code-block:: default


    meshing.tui.file.write_mesh("wing.msh.h5")








.. GENERATED FROM PYTHON SOURCE LINES 224-234

Solve and postprocess
---------------------
Once you have completed the watertight geometry meshing workflow, you can
solve and postprcess the results.

Switch to solution mode
~~~~~~~~~~~~~~~~~~~~~~~
Switch to solution mode. Now that a high-quality mesh has been generated
using Fluent in meshing mode, you can switch to solver mode to complete the
setup of the simulation.

.. GENERATED FROM PYTHON SOURCE LINES 234-237

.. code-block:: default


    solver = meshing.switch_to_solver()








.. GENERATED FROM PYTHON SOURCE LINES 238-244

Check mesh in solver mode
~~~~~~~~~~~~~~~~~~~~~~~~~
Check the mesh in solver mode. The mesh check lists the minimum and maximum
x, y, and z values from the mesh in the default SI units of meters. It also
reports a number of other mesh features that are checked. Any errors in the
mesh are reported.

.. GENERATED FROM PYTHON SOURCE LINES 244-247

.. code-block:: default


    solver.mesh.check()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    '*the-non-printing-object*'



.. GENERATED FROM PYTHON SOURCE LINES 248-251

Define model
~~~~~~~~~~~~
Set the k-w sst turbulence model.

.. GENERATED FROM PYTHON SOURCE LINES 251-259

.. code-block:: default


    # model : k-omega
    # k-omega model : sst

    solver.setup.models.viscous.model = "k-omega"

    solver.setup.models.viscous.k_omega_model = "sst"








.. GENERATED FROM PYTHON SOURCE LINES 260-263

Define materials
~~~~~~~~~~~~~~~~
Modify the default material ``air`` to account for compressibility and variations of the thermophysical properties with temperature.

.. GENERATED FROM PYTHON SOURCE LINES 263-285

.. code-block:: default


    # density : ideal-gas
    # viscosity : sutherland
    # viscosity method : three-coefficient-method
    # reference viscosity : 1.716e-05 [kg/(m s)]
    # reference temperature : 273.11 [K]
    # effective temperature : 110.56 [K]

    air = solver.setup.materials.fluid["air"]

    air.density.option = "ideal-gas"

    air.viscosity.option = "sutherland"

    air.viscosity.sutherland.option = "three-coefficient-method"

    air.viscosity.sutherland.reference_viscosity = 1.716e-05

    air.viscosity.sutherland.reference_temperature = 273.11

    air.viscosity.sutherland.effective_temperature = 110.56








.. GENERATED FROM PYTHON SOURCE LINES 286-289

Boundary Conditions
~~~~~~~~~~~~~~~~~~~
Set the boundary conditions for ``pressure_farfield``.

.. GENERATED FROM PYTHON SOURCE LINES 289-316

.. code-block:: default


    # gauge pressure : 0 [Pa]
    # mach number : 0.8395
    # temperature : 255.56 [K]
    # x-component of flow direction : 0.998574
    # z-component of flow direction : 0.053382
    # turbulent intensity : 5 [%]
    # turbulent viscosity ratio : 10

    pressure_farfield = solver.setup.boundary_conditions.pressure_far_field[
        "pressure_farfield"
    ]

    pressure_farfield.gauge_pressure = 0

    pressure_farfield.m = 0.8395

    pressure_farfield.t = 255.56

    pressure_farfield.flow_direction[0] = 0.998574

    pressure_farfield.flow_direction[2] = 0.053382

    pressure_farfield.turb_intensity = 0.05

    pressure_farfield.turb_viscosity_ratio = 10








.. GENERATED FROM PYTHON SOURCE LINES 317-320

Operating Conditions
~~~~~~~~~~~~~~~~~~~~
Set the operating conditions.

.. GENERATED FROM PYTHON SOURCE LINES 320-325

.. code-block:: default


    # operating pressure : 80600 [Pa]

    solver.setup.general.operating_conditions.operating_pressure = 80600








.. GENERATED FROM PYTHON SOURCE LINES 326-329

Initialize flow field
~~~~~~~~~~~~~~~~~~~~~
Initialize the flow field using hybrid initialization.

.. GENERATED FROM PYTHON SOURCE LINES 329-332

.. code-block:: default


    solver.solution.initialization.hybrid_initialize()








.. GENERATED FROM PYTHON SOURCE LINES 333-336

Save case file
~~~~~~~~~~~~~~
Solve the case file (``external_compressible1.cas.h5``).

.. GENERATED FROM PYTHON SOURCE LINES 336-339

.. code-block:: default


    solver.file.write(file_name="external_compressible.cas.h5", file_type="case")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 340-343

Solve for 25 iterations
~~~~~~~~~~~~~~~~~~~~~~~~
Solve for 25 iterations (100 iterations is recommended, however for this example 25 is sufficient).

.. GENERATED FROM PYTHON SOURCE LINES 343-346

.. code-block:: default


    solver.solution.run_calculation.iterate(iter_count=25)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    False



.. GENERATED FROM PYTHON SOURCE LINES 347-350

Write final case file and data
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Write the final case file and the data.

.. GENERATED FROM PYTHON SOURCE LINES 350-353

.. code-block:: default


    solver.file.write(file_name="external_compressible1.cas.h5", file_type="case")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 354-357

Close Fluent
~~~~~~~~~~~~
Close Fluent.

.. GENERATED FROM PYTHON SOURCE LINES 357-360

.. code-block:: default


    solver.exit()









.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 6 minutes  27.672 seconds)


.. _sphx_glr_download_examples_00-fluent_external_compressible_flow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: external_compressible_flow.py <external_compressible_flow.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: external_compressible_flow.ipynb <external_compressible_flow.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
